@@ -1,3 +1,11 @@
+2006-01-18  Miguel Guzman  <aglanor@gmail.com>
+    * src/services/sound/SoundService.*:
+        * added a method to update the listener position
+    * src/components/ogre/AvatarCamera.*:
+        * made AvatarCamera an Ogre::FrameListener
+        * each frame, it updates the SoundService listener position
+          to the camera position
+
 2006-01-17  Erik Hjortsberg  <erik@katastrof.nu>
 
     * src/components/ogre/EmberEntity.*|EmberPhysicalEntity.*:
